<resources>
    <string name="app_name">Hotels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_image">Status Image</string>
    <string name="hotel_toolbar_tv">Available Hotels</string>
    <string name="hotel_name_placeholder">London Farringdon (Smithfield)</string>
    <string name="hotel_description_tv">Just a 10-minute walk from Farringdon station, close to Smithfield Market and the Museum of London</string>
    <string name="rooms_title_tv">Rooms</string>
    <string name="room_type_tv">Twin</string>
    <string name="room_name_tv">Flex</string>
    <string name="room_price_tv">199.99</string>
    <string name="room_currency_tv">£</string>
    <string name="detail_hotel_address_tv">24-30 West Smithfield, West Smithfield, London, EC1A 9HB</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="room_description_tv">Pay now or on arrival, fully refundable with free cancellation up to 1pm on the day of arrival</string>
    <string name="detail_toolbar_tv">Hotel Details</string>
</resources>